Disable DEBUG logs
Fixes gh-3757